# Alloc-PDF-to-text

./: Dockerfile  README.md  TODO.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: build-pdf-service.yml
src/: __init__.py  config.py  main.py
src/controller/: __init__.py  routes.py
src/domain/: schemas.py
src/service/: pdf_service.py
