[project]
name = "pdf-service"
version = "0.1.0"
description = "PDF extraction service"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "PyMuPDF>=1.24",
  "pymupdf4llm",
  "fastapi-pagination>=0.12",
  "boto3>=1.34",
]

[project.scripts]
pdf-api = "pdf.main:run"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
